--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <!-- Выпадающий список для выбора языка распознавания -->
       <label for="recognition-language-select">Выберите язык распознавания:</label>
       <select id="recognition-language-select">
-        <option value="ru-RU">Русский</option>
-        <option value="en-US">Английский (США)</option>
-        <option value="es-ES">Испанский</option>
-        <option value="de-DE">Немецкий</option>
-        <option value="fr-FR">Французский</option>
+        <option value="ru_RU">Русский</option>
+        <option value="en_US">Английский (США)</option>
+        <option value="es_ES">Испанский</option>
+        <option value="de_DE">Немецкий</option>
+        <option value="fr_FR">Французский</option>
       </select>
 
       <!-- Кнопка для включения/выключения распознавания -->
@@ -39,11 +39,11 @@
       <!-- Выпадающий список для выбора языка озвучки -->
       <label for="language-select">Выберите язык озвучки:</label>
       <select id="language-select">
-        <option value="ru-RU">Русский</option>
-        <option value="en-US">Английский (США)</option>
-        <option value="es-ES">Испанский</option>
-        <option value="de-DE">Немецкий</option>
-        <option value="fr-FR">Французский</option>
+        <option value="ru_RU">Русский</option>
+        <option value="en_US">Английский (США)</option>
+        <option value="es_ES">Испанский</option>
+        <option value="de_DE">Немецкий</option>
+        <option value="fr_FR">Французский</option>
       </select>
 
       <!-- Настройка высоты голоса -->
